<resources>
    <string name="app_name">Web Editor</string>
    <string name="author">Owais Lone</string>
    <string name="copyright">Created by Owais Lone</string>
    <string name="logo"> Logo Image </string>
    <string name="about">About</string>
    <string name="create_file">Create New File</string>
    <string name="open_file">Open Existing File</string>
    <string name="create_project">Create New Project</string>
    <string name="open_project">Open Existing Project</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="save_file">Save File</string>
    <string name="code_hint">Please Enter Your Piece of Code Here!</string>
    <string name="tab">Tab</string>
    <string name="h1">H1</string>
    <string name="h2">H2</string>
    <string name="h3">H3</string>
    <string name="h4">H4</string>
    <string name="h5">H5</string>
    <string name="h6">H6</string>
    <string name="save">Save</string>
    <string name="run">Run</string>
    <string name="my_code" translatable="false">My Code is This</string>
    <string name="h1_tag"><![CDATA[<h1></h1>]]></string>
    <string name="double_quotes">\"\"</string>
    <string name="equal">=</string>
    <string name="bold"><![CDATA[<b></b>]]></string>
    <string name="uline"><![CDATA[<u></u>]]></string>
    <string name="italic"><![CDATA[<i></i>]]></string>

</resources>